# menuXYZ

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuxy.cpp  menuxy.h
